--- a/css/main.css
+++ b/css/main.css
@@ -605,6 +605,7 @@ span {
     padding: 1.3em 0em 1.3em 0em;
     margin: -1.2em -0.67em -1.2em -0.67em !important;
     border-radius: 26px;
+    cursor: pointer;
 }
 
 .bg-img-buttons-parks{
