Added Ride&Park: 'Add to list' Listeners

--- a/css/main.css
+++ b/css/main.css
@@ -1161,6 +1161,7 @@ span {
     float: inline-end;
     bottom: 1.45em;
     right: 1.6em;
+    cursor: pointer;
 }
 
 .edit-profile-btn p{
@@ -1228,7 +1229,7 @@ span {
     display: flex;
     position: relative;
     background-color: rgba(255, 255, 255, 0);
-    border: solid #707070 2.5px;
+    border: solid #707070 2px;
     border-radius: 17px;
     padding: 0.3em 0.7em 0.3em 0.4em;
     float: inline-end;
@@ -1649,6 +1650,7 @@ display: flex;
     border-radius: 10pt;
     margin: 0rem 1rem 0rem 0rem;
     box-shadow: 0px 3px 8px #00000029;
+    cursor: pointer;
 }
 
 .list-ride-location-div {
@@ -1751,11 +1753,12 @@ display: flex;
     display: flex;
     position: relative;
     background-color: rgba(255, 255, 255, 0);
-    border: solid #707070 2.5px;
+    border: solid #707070 2px;
     border-radius: 17px;
     padding: 0.3em 0.5em 0.3em 0.5em;
     float: inline-end;
     margin-left: 1.5rem;
+    cursor: pointer;
 }
 
 .add-ride-list-btn-div i {
@@ -1881,10 +1884,11 @@ display: flex;
     display: flex;
     position: relative;
     background-color: rgb(255, 255, 255);
-    border: solid #707070 2.5px;
+    border: solid #707070 2px;
     border-radius: 17px;
     padding: 0.3rem 0.7em 0.3em 0.7em;
     float: inline-end;
+    cursor: pointer;
 }
 
 .add-ride-park-btn-div i {
@@ -2027,10 +2031,11 @@ display: flex;
     background-color: #F5D79C;
     color: #000000;
     font-size: 0.75rem;
-    border: solid #707070 2.5px;
+    border: solid #707070 2px;
     border-radius: 17px;
     padding: 0.15rem 0.9em 0.3em 0.9em;
     margin: 0.2rem 0rem 0.4rem 0rem;
+    cursor: pointer;
 }
 
 .park-ride-stat-div .park-stat-btn-div {
@@ -2088,6 +2093,7 @@ display: flex;
 
 .user-review-rating-div .fa-triangle-exclamation, .fa-thumbs-down {
     margin-left: 0.7rem;
+    cursor: pointer;
 }
 
 .user-review-rating-div .thumbs-down-review-count,.thumbs-up-review-count {
@@ -2097,6 +2103,7 @@ display: flex;
 .thumbs-up-review, .thumbs-down-review {
     display: flex;
     align-items: center;
+    cursor: pointer;
 }
 
 .user-review-pfp-div {
@@ -2153,11 +2160,12 @@ padding-bottom: 1rem;
     display: flex;
     position: relative;
     background-color: rgba(255, 255, 255, 0);
-    border: solid #707070 2.5px;
+    border: solid #707070 2px;
     border-radius: 17px;
     padding: 0.3em 0.7em 0.3em 0.7em;
     float: inline-end;
     margin-left: 2rem;
+    cursor: pointer;
 }
 
 .view-rides-btn-div i {
@@ -2185,6 +2193,7 @@ padding-bottom: 1rem;
     border-radius: 10pt;
     margin: 0rem 1rem 0rem 0rem;
     box-shadow: 0px 3px 8px #00000029;
+    cursor: pointer;
 }
 
 .parks-ride-data-div {
