--- a/css/main.css
+++ b/css/main.css
@@ -1312,6 +1312,7 @@ span {
 
 .username-div i {
     margin: 0em 0em 0.1em 0.7em;
+    cursor: pointer;
 }
 
 .username-div, .list-title-div {
@@ -2157,6 +2158,23 @@ padding-bottom: 1rem;
 }
 
 .view-rides-btn-div button {
+    display: flex;
+    position: relative;
+    background-color: rgba(255, 255, 255, 0);
+    border: solid #707070 2px;
+    border-radius: 17px;
+    padding: 0.3em 0.7em 0.3em 0.7em;
+    float: inline-end;
+    margin-left: 2rem;
+    cursor: pointer;
+}
+.park-view-rides-btn-div {
+    margin-left: -6rem;
+    position: relative;
+    top: 4rem;
+}
+
+.park-view-rides-btn-div button {
     display: flex;
     position: relative;
     background-color: rgba(255, 255, 255, 0);
