--- a/css/main.css
+++ b/css/main.css
@@ -2738,6 +2738,7 @@ padding-bottom: 1rem;
     top: 0.6rem;
     left: 1.5rem;
     font-size: 1.2rem;
+    rotate: 45deg;
 }
 
 .ride-compared p {
