--- a/css/main.css
+++ b/css/main.css
@@ -1874,6 +1874,10 @@ display: flex;
     line-height: 2.3rem;
     margin: auto;
     max-width: 17rem;
+    min-height: 6rem;
+    display: flex;
+    align-items: center;
+    justify-content: center;
 }
 
 .park-ride-img-div {
@@ -1923,6 +1927,8 @@ display: flex;
     justify-content: center;
     position: relative;
     bottom: 1rem;
+    /* margin-left: 1rem;
+    margin-right: 1rem; */
 }
 
 .park-ride-location-div {
