--- a/css/main.css
+++ b/css/main.css
@@ -2462,7 +2462,8 @@ padding-bottom: 1rem;
 .city-dropdown-content {
     display: none;
     margin-right: 2.7rem;
-    margin-top: 6.9rem;
+    margin-top: 8.4rem;
+    /* margin-top: 6.9rem; */
     position: absolute;
     flex-direction: column;
     z-index: 1;
